--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -89,7 +89,12 @@
               </a>
           </li>
           <li>
-              <a href="/customer/customer_account_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de saldo de conta cliente" data-original-title="Relatórios de saldo de conta cliente">
+              <a href="/customer/customer_account_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de saldo de conta cliente" data-original-title="Relatório de saldo de conta cliente">
+                <img width='32' src="/images/account_customer.png"/>
+              </a>
+          </li> 
+          <li>
+              <a href="/customer/customer_accountdetail_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório detalhado de conta cliente" data-original-title="Relatório detalhado de conta cliente">
                 <img width='32' src="/images/account_customer.png"/>
               </a>
           </li> 
