--- a/src/main/webapp/financial/commission_report.html
+++ b/src/main/webapp/financial/commission_report.html
@@ -289,7 +289,7 @@
         <th class='lift:SecuritySnippet.isShowSalesToUser'>Val Pag</th>
         <th>Val Comissão</th>
         <th class="clearfix lift:SecuritySnippet.hasAuxiliarModule"><span data-i18n='Assistente'></span></th>
-        <th title='Quando a opção relatório sintético é marcada, as formas de pagamento aparecem com um * porque pode haver mais de uma e apenas uma é exibida'>Forma Pagto</th>
+        <th>Forma Pagto</th>
       </thead>
       <tbody>
       </tbody>
