project/budget section - ins del

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -207,7 +207,7 @@
               <div class ='span18'>
                 <div class="clearfix">
                   <div class="input">
-                    <input class="btn success" id="add_section" type="button" value="Adicionar">
+                    <input class="btn success" id="add_sectionXXXXXX" type="button" value="Adicionar">
                   </div>
                 </div>
               </div>
