group_meta_data collapsed

--- a/src/main/webapp/product/inventory_control_report.html
+++ b/src/main/webapp/product/inventory_control_report.html
@@ -23,6 +23,7 @@
                         "name":4, 
                         "groupFunction" : group, 
                         "show" : true,
+                        "collapsed" : true,
                         "formater" : formater
                   }
           } : false;
