offsale report collapsed false

--- a/src/main/webapp/financial_admin/offsale_report.html
+++ b/src/main/webapp/financial_admin/offsale_report.html
@@ -15,7 +15,8 @@
       };        
       var group_meta_data = {"key":0, "name":0, "groupFunction" : group,
                     "formater" : formater,
-                    "show" : true
+                    "show" : true,
+              "collapsed" : false
       }
       var url = "/report/offsale";
       var request = function(){
