payment type optin all - command budget filter

--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -172,7 +172,7 @@
             <div class="clearfix">
                 <label for="type_select_filter">Formas de Pagamento</label>
                 <div class="input">
-                  <select id='paymenttype_select_filter' multiple="true" name='paymenttype_select_filter'>
+                  <select class="alow_all" id='paymenttype_select_filter' multiple="true" name='paymenttype_select_filter'>
                   </select>
                 </div>
             </div>
