setting offsale  calendar command and cashier

--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -264,8 +264,9 @@
 						<input type="hidden" class="has-ephysio-system lift:SecuritySnippet.isEphysioSystem" value="1">
 						<input type="hidden" class="has-esmile-system lift:SecuritySnippet.isEsmileSystem" value="1">
                         <input type="hidden" class="has-pet-system lift:SecuritySnippet.isEbellepetSystem" value="1">
-                        <input type="hidden" class="has-auxiliar-module lift:SecuritySnippet.hasAuxiliarModule" value="1">
+                        <input type="hidden" class="has-offsale-module lift:SecuritySnippet.hasOffSaleModule" value="1">
                         <input type="hidden" class="has-unit-module lift:SecuritySnippet.hasUnitModule" value="1">
+                        <input type="hidden" class="has-auxiliar-module lift:SecuritySnippet.hasAuxiliarModule" value="1">
 						<div class="lift:SecuritySnippet.hasAuxiliarModule clearfix">
 							<label for="activitys"><span data-i18n='Serviço'></span> / <span data-i18n='Assistente'></span> </label>
 							<div class="input">
@@ -336,6 +337,7 @@
 						<th class="lift:SecuritySnippet.isEbellepetSystem">Pet</th>
 						<th><span data-i18n='Serviço'></span></th>
 						<th class="lift:SecuritySnippet.isEsmileSystem">Dente</th>
+						<th class="lift:SecuritySnippet.hasOffSaleModule">Convênio</th>
 						<th>Início</th>
 						<th>Fim</th>
 						<th>Status</th>
