account balance - ony in unit

--- a/src/main/webapp/financial_admin/account.html
+++ b/src/main/webapp/financial_admin/account.html
@@ -33,7 +33,7 @@
                 <span class="help-block">Banco da conta caso haja</span>
              </div>
           </div>               
-          <div class="clearfix">
+          <!--div class="clearfix">
             <label for="value">Saldo</label>
              <div class="input">
                 <div class="input-prepend">
@@ -42,7 +42,7 @@
                   <span class="help-block">Saldo altual da conta</span>
                 </div>
              </div>
-          </div>
+          </div-->
           <div class="clearfix">
             <label for="allowCashierOut">Aceita saída do caixa?</label>
             <div class="input">
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="clearfix">
-            <label for="allowCashierOut">Controla saldo?</label>
+            <label for="balanceControl">Controla saldo?</label>
             <div class="input">
               <input id="balanceControl" name='balanceControl'/>
               <span class="help-block">O saldo dessa conta será controlado?</span>
