product ranking - offsale filter

--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -77,7 +77,7 @@
                                 <select class= 'local_storage xlarge' id='offsale'  name="offsale"></select>
                               </div>
                               </span>
-                              <span class="help-block">Convênio no cadstro de <span data-i18n='Clientes'></span>, não no atendimento</span>
+                              <span class="help-block">Convênio no cadastro de <span data-i18n='Clientes'></span>, não no atendimento</span>
                             </div>
                           </div>
                         </div>
