--- a/src/main/webapp/customer/prod_ranking.html
+++ b/src/main/webapp/customer/prod_ranking.html
@@ -15,6 +15,7 @@
       renderReport(url,fields,$("#form_report").serializeObject());
     }
     $("#unit").unitField(true,false);
+    $("#offsale").offSaleField(true);
     $("#send").click(request);
     //request();
   });  
@@ -39,7 +40,7 @@
             </div>
           </div>
         </div>
-        <div class="clearfix">
+        <div class="clearfix lift:SecuritySnippet.hasUnitModule">
           <label for="unit">Unidade </label>
             <div class="input">
               <div class="inline-inputs">
@@ -48,6 +49,20 @@
                 </span>
               </div>
             </div>
+        </div>
+        <div class="clearfix lift:SecuritySnippet.hasOffSaleModule">
+          <label for="offsale">Convênio</label>
+          <div class="input">
+            <div class="inline-inputs">
+            <span>
+              <div style="float:left; padding-right:10px" class="input-prepend">
+                <span class="add-on"><img width="16" src="/images/agreement.png"></span> 
+                <select class= 'local_storage xlarge' id='offsale'  name="offsale"></select>
+              </div>
+              </span>
+              <span class="help-block">Convênio no cadastro de <span data-i18n='Clientes'></span>, não no atendimento</span>
+            </div>
+          </div>
         </div>
         <div class="clearfix">
           <label for="buscar"></label>
