sales_and_commission - paid liquid and commission fix

--- a/src/main/webapp/financial_admin/sales_and_commission.html
+++ b/src/main/webapp/financial_admin/sales_and_commission.html
@@ -12,8 +12,17 @@
     var total = 0;
     var commission = 0;
     var balance = 0;
+    var paid = 0;
+    var liquid = 0;
     var hasUnitModule = $('.has-unit-module').length > 0;
     fields[0] = "int";
+    fields[1] = {
+      type: "format",
+      decode: function(name, row) {
+        customers.push(row[0]);
+        return "<a href='/customer/edit?id=" + row[0] + "' target='_customer_maste'>" + name + "</a>";
+      }
+    }
     if (!hasUnitModule) {
       fields[4] = "none";
     }
@@ -43,16 +52,32 @@
       type : "format",
       decode : function(value){
         var floatValue = parseFloat(value);
+        if(!isNaN(floatValue)) {
+          paid += floatValue;
+        }
         return floatValue.formatMoney();
       }
     };
     fields[8] = {
+      type : "format",
+      decode : function(value){
+        var floatValue = parseFloat(value);
+        if(!isNaN(floatValue)) {
+          liquid += floatValue;
+        }
+        return floatValue.formatMoney();
+      }
+    };
+/*
+    fields[9] = {
       type : "format",
       decode : function(id){
         customers.push(id);
         return "<a class='btn' href='/user/edit?id="+id+"' target='_blank'>Ir</a>"
       }
     };
+*/
+    fields[9] = "none";
     $("#unit").unitField(true,false);
     var url = "/report/sales_and_commission";
     var request = function(){
@@ -60,10 +85,14 @@
       total = 0.00;
       commission = 0.00;
       balance = 0.00;
+      paid = 0.00;
+      liquid = 0.00;
       renderReport(url,fields,$("#form_report").serializeObject(), "#grid", function(){
         $('#total').val(total.formatMoney());
         $('#commission').val(commission.formatMoney());
         $('#balance').val(balance.formatMoney());
+        $('#paid').val(paid.formatMoney());
+        $('#liquid').val(liquid.formatMoney());
       });
     }
     $("#send").click(request);
@@ -206,6 +235,16 @@
                       <input class="small" id="balance" name="balance" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Saldo</span>
                     </div>
+                    <div class="input-prepend" style="float:left; padding-right:10px">
+                      <span class="add-on"><img src="/images/money.png" width="16"></span>
+                      <input class="small" id="paid" name="paid" size="19" placeholder="0.00" type="text">
+                      <span class="help-block">Vales</span>
+                    </div>
+                    <div class="input-prepend" style="float:left; padding-right:10px">
+                      <span class="add-on"><img src="/images/money.png" width="16"></span>
+                      <input class="small" id="liquid" name="liquid" size="19" placeholder="0.00" type="text">
+                      <span class="help-block">Líquido</span>
+                    </div>
                   </div>
                 </div>
               </div>                      
@@ -226,7 +265,7 @@
         <th>Faturamento</th>
         <th>Comissão</th>
         <th>Vales</th>
-        <th>Cadastro</th>
+        <th>Líquido</th>
       </thead>
       <tbody>
       </tbody>
