tooth astext - budget permission - mouth region

--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -294,6 +294,7 @@
                                     <option class="lift:SecuritySnippet.isNotEgrexSystem" value="13">Clientes</option>
                                     <option class="lift:SecuritySnippet.isEgrexSystem" value="13">Membros</option>
                                     <option class="lift:SecuritySnippet.isMedicalSystem" value="19">Prontuário</option>
+                                    <option class="lift:SecuritySnippet.hasBudgetModule" value="22">Orçamento</option>
                                     <option value="5">Serviços</option>
                                     <option class="lift:SecuritySnippet.hasInventoryModule" value="2">Estoque</option>
                                     <option class="lift:SecuritySnippet.hasFinancialModule" value="3">Financeiro</option>
