--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -207,7 +207,7 @@
               <div class ='span18'>
                 <div class="clearfix">
                   <div class="input">
-                    <input class="btn success" id="add_sectionXXXXXX" type="button" value="Adicionar">
+                    <a class="btn primary" onclick="new_detail()">Novo item</a>
                   </div>
                 </div>
               </div>
