--- a/src/main/webapp/financial/commission_report_filter.html
+++ b/src/main/webapp/financial/commission_report_filter.html
@@ -6,11 +6,35 @@
   <script type="text/javascript">
   $(function(){
     var fields = [];
+    fields[0] = {
+      type: "format",
+      decode: function(name, row) {
+        return "<a href='/user/edit?id=" + row[11] + "' target='_user_maste'>" + name + "</a>";
+      }
+    }
     fields[1] = "int";
     fields[3] = "date";
     fields[4] = "date";
+    fields[5] = {
+      type: "format",
+      decode: function(name, row) {
+        return "<a href='/customer/edit?id=" + row[10] + "' target='_customer_maste'>" + name + "</a>";
+      }
+    }
+    fields[6] = {
+      type: "format",
+      decode: function(name, row) {
+        if (row[12] != "" && row[12] == "0") {
+          return "<a href='/activity/edit?id=" + row[13] + "' target='_activity_maste'>" + name + "<a>";
+        } else {
+          return "<a href='/product_admin/edit?id=" + row[13] + "' target='_product_maste'>" + name + "</a>";
+        }
+      }
+    }
     fields[7] = "real";
     fields[8] = "real";
+    fields[10] = "none";
+    fields[11] = "none";
     var url = "/report/commissions_filter";
     var total_to_pay = 0.00;
     var request = function(){
