--- a/src/main/webapp/financial_cashier/print_command.html
+++ b/src/main/webapp/financial_cashier/print_command.html
@@ -12,9 +12,10 @@
     $("#command").html(gup("command"));
     var date =  gup("date") || getDateBr(new Date());
     $("#date").html(date);
+    var idcustomer1 = (gup("customerId"));
     //$("#week_day").html(i18n_days[new Date().getDay()]);
     var request = function(){
-      renderReport(url,fields,{command:gup("command"), unit:gup("unit"), date: date },"#grid",function(data){
+      renderReport(url,fields,{command:gup("command"), unit:gup("unit"), date: date, customer: idcustomer1 },"#grid",function(data){
         var customer = data[0][6];
         $("#customer").html(customer);
         window.print();
