commission report filter 2

--- a/src/main/webapp/financial/commission_report_filter.html
+++ b/src/main/webapp/financial/commission_report_filter.html
@@ -35,6 +35,8 @@
     fields[8] = "real";
     fields[10] = "none";
     fields[11] = "none";
+    fields[12] = "none";
+    fields[13] = "none";
     var url = "/report/commissions_filter";
     var total_to_pay = 0.00;
     var request = function(){
