--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -318,9 +318,12 @@
       </span>
       <div>
         <br>
-        Este relatório inclui <b>todos</b> os lançamentos financeiros que estão na tabela,<br>
+        Este relatório inclui <b>todos</b> os lançamentos financeiros que estão na tabela,<br/>
         diferente da visão de DRE nos relatórios que exibe só os efetivamente pagos.
       </div>
+      <br/>
+      <input class="btn primary" type="button" id='print_message' value='Imprimir' />
+      <br/>
   </div>
   <div id="account_modal" class="modal hide" style="width: 90%; left: 5%; margin: auto auto auto auto; top: 5%; height: 100%; max-height: 100%;">
 
