--- a/src/main/webapp/reports/treatment_history.html
+++ b/src/main/webapp/reports/treatment_history.html
@@ -72,7 +72,9 @@
 					          <option value="busyevent">
 					            Bloqueio de Agenda
 					          </option>
-					          <option value="business_pattern">
+					          <option value="cashier">
+					            Caixa
+					          </option>                  <option value="business_pattern">
 					            Cliente/Profissional
 					          </option>                                  
 					          <option value="commision">
