budget - save and new

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -354,7 +354,8 @@
               <div class="row">
                 <div class="span16">
                   <div class="well">
-                    <input class="btn success b_add_budget" id="b_add_budget" type="button" value="Salvar">
+                    <input class="btn success b_add_budget" id="b_add_budget" type="button" value="Salvar" title="Salva e volta para lista de itens">
+                    <input class="btn success b_addnew_budget" id="b_addnew_budget" type="button" value="Salvar e Novo" title="Salva e permanece na janela para inserção de um novo item">
                   </div>
                   <div class="clearfix">
                     <label for="cutomer_id_treatment"><span data-i18n='Cliente'></span></label>
@@ -492,7 +493,8 @@
                      </div>
                   </div>
                   <div class="well">
-                    <input class="btn success b_add_budget" id="b_add_budget" type="button" value="Salvar">
+                    <input class="btn success b_add_budget" id="b_add_budget" type="button" value="Salvar" title="Salva e volta para lista de itens">
+                    <input class="btn success b_addnew_budget" id="b_addnew_budget" type="button" value="Salvar e Novo" title="Salva e permanece na janela para inserção de um novo item">
                   </div>                
                </div>
               </div>
